# dreamrtspserver

./: COPYING  configure.ac
src/: Makefile.am  dreamrtsp.conf  dreamrtspserver.c  dreamrtspserver.h  dreamrtspserver.service  gstdreamrtsp.c  gstdreamrtsp.h
test/: dreamrtspservertest.py
